<resources>
    <string name="app_name">趣闻</string>
    <string name="mine_item_0">消息中心</string>
    <string name="mine_item_1">绑定手机</string>
    <string name="mine_item_2">我的频道</string>
    <string name="mine_item_3">帮助中心</string>
    <string name="mine_item_4">版本更新</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="log_in">登     录</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
