<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pagers.View.Activity.LogInActivity">

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="24dp"
        android:src="@mipmap/img_channle_goback"
        android:background="@null"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="17dp"
        android:onClick="Back"
        />


    <LinearLayout
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="72dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:theme="@style/toolbar_title"
            android:text="@string/app_name"/>

        <EditText
            android:id="@+id/act_login_et_pone_num"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:maxLength="11"
            android:layout_marginTop="31dp"
            android:background="@drawable/et_bg1"
            android:inputType="numberSigned"/>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="25dp"
            android:background="@drawable/et_bg1"
            android:layout_marginTop="40dp">
            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@null"
                android:inputType="text"
                android:layout_height="match_parent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:text="@string/get_verification_code"/>
        </LinearLayout>


        <Button
            android:layout_width="280dp"
            android:layout_height="44dp"
            android:layout_marginTop="80dp"
            android:textColor="@color/colorWrite"
            android:background="@drawable/btn_bg1"
            android:text="@string/log_in"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

</RelativeLayout>