<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/fgm_Mine_LL_user"
                    android:visibility="invisible"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="225dp">

                        <LinearLayout
                            android:orientation="vertical"
                            android:background="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:gravity="center"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="200dp">

                                <ImageView
                                    android:id="@+id/user_icon"
                                    android:layout_width="71dp"
                                    android:layout_height="71dp"
                                    android:src="@mipmap/ic_launcher"
                                    />

                                <LinearLayout
                                    android:orientation="vertical"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">
                                    <TextView
                                        android:id="@+id/user_name"
                                        android:padding="5dp"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:theme="@style/mine_user_name"
                                        android:text="username"
                                        android:textColor="#ffffff"/>
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textColor="#ffffff"
                                        android:theme="@style/mine_user_ID"
                                        android:text="ID："/>
                                </LinearLayout>

                            </LinearLayout>
                        </LinearLayout>



                        <LinearLayout
                            android:gravity="center"
                            android:layout_alignParentBottom="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:gravity="center"
                                android:orientation="vertical"
                                android:background="@drawable/mine_fillet_rectangle"
                                android:layout_marginRight="5dp"
                                android:layout_width="150dp"
                                android:layout_height="50dp">
                                <TextView
                                    android:id="@+id/fgm_Mine_text_usertoken2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:theme="@style/mine_num"

                                    android:text="0"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:theme="@style/mine_text"
                                    android:text="我的权益份额"/>
                            </LinearLayout>

                            <LinearLayout
                                android:gravity="center"
                                android:orientation="vertical"
                                android:background="@drawable/mine_fillet_rectangle"
                                android:layout_marginLeft="5dp"
                                android:layout_width="150dp"
                                android:layout_height="50dp">
                                <TextView
                                    android:id="@+id/fgm_Mine_text_usertoken"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:theme="@style/mine_num"
                                    android:text="0"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:theme="@style/mine_text"
                                    android:text="我的零钱"/>
                            </LinearLayout>

                        </LinearLayout>

                    </RelativeLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/fgm_Mine_btn_login"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:textSize="20sp"
                    android:background="@drawable/yuanjiao"
                    android:text="登陆"/>
            </FrameLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:id="@+id/item_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/text0"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/mine_text"
                        android:text="@string/mine_item_0"/>

                    <TextView
                        android:id="@+id/hint0"
                        android:textColor="#9f9f9f"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/go0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/go0"
                        android:layout_alignParentRight="true"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@mipmap/ic_launcher_rarrow"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background"/>


                <RelativeLayout
                    android:id="@+id/item_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/text1"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/mine_text"
                        android:text="@string/mine_item_1"/>

                    <TextView
                        android:id="@+id/hint1"
                        android:textColor="#9f9f9f"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/go1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/go1"
                        android:layout_alignParentRight="true"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@mipmap/ic_launcher_rarrow"/>
                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background"/>

                <RelativeLayout
                    android:id="@+id/item_set"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/text2"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/mine_text"
                        android:text="@string/mine_item_2"/>

                    <TextView
                        android:id="@+id/hint2"
                        android:textColor="#9f9f9f"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/go2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/go2"
                        android:layout_alignParentRight="true"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@mipmap/ic_launcher_rarrow"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background"/>

                <RelativeLayout
                    android:id="@+id/item_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/text3"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/mine_text"
                        android:text="@string/mine_item_3"/>

                    <TextView
                        android:id="@+id/hint3"
                        android:textColor="#9f9f9f"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/go3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/go3"
                        android:layout_alignParentRight="true"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@mipmap/ic_launcher_rarrow"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background"/>

                <RelativeLayout
                    android:id="@+id/item_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/text4"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/mine_text"
                        android:text="@string/mine_item_4"/>

                    <TextView
                        android:id="@+id/hint4"
                        android:textColor="#9f9f9f"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/go4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/go4"
                        android:layout_alignParentRight="true"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@mipmap/ic_launcher_rarrow"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background"/>

            </LinearLayout>

            </LinearLayout>

    </ScrollView>


</LinearLayout>
